contract tests are created